2007-11-25  Ales Hakl  <ales at hakl dot net>

	* lib/load.c (dfsch_require): rename *modules* to load:*modules*

	* src/dfsch.c (dfsch_symbol_or_keyword): convert symbols or keyword to 
	string (without the leading :)

2007-11-15  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (make_symbol): keyword support
	(dfsch_symbol_2_keyword): fixed potential race condition

	* src/parse.c: Throw exceptions from parser

2007-11-03  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_zip): construct list directly

2007-09-26  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (pair_write): removed special case for simple pairs

2007-09-23  Ales Hakl  <ales at hakl dot net>

	* src/control.c (native_apply): fix apply

2007-09-20  Ales Hakl  <ales at hakl dot net>

	* lib/unix.c: use WCONTINUED only when it is defined

2007-09-19  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): require as command line option

2007-09-15  Ales Hakl  <ales at hakl dot net>

	* src/control.c (native_form_let): use argument parsing macros
	removed MIN_ARGS() and NEED_ARGS() macros

	* dfsch/dfsch.h (DFSCH_ARG_REST): macro for getting rest of
	arguments

	* src/control.c (native_form_quote): use argument parsing macros

2007-09-03  Ales Hakl  <ales at hakl dot net>

	* src/ports.c (dfsch_port_readline): line reading function

2007-08-31  Ales Hakl  <ales at hakl dot net>

	* dfsch/ports.h: Port type definition.
	Documentation comments

2007-08-26  Ales Hakl  <ales at hakl dot net>

	* src/object.c (dfsch__object_native_register): define
	class-superclass in top-level environment

2007-08-22  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (alloc_vector): vector was allocated too large.

	* lib/unix.c (stat_t): stat(2) and struct stat wrappers
	(native_lstat): lstat(2) and fstat(2)

2007-08-21  Ales Hakl  <ales at hakl dot net>

	* src/util.c (dfsch__vsaprintf): sprintf() that allocates output
	buffer

	* src/parse.c (tokenizer_process): ignore shebang
