@@ -1,3 +1,8 @@
+2007-11-28  Ales Hakl  <ales at hakl dot net>
+
+	* src/dfsch.c: Removed keywords (it's useless syntactic sugar which 
+	is too non-trivial to get right)
+
 2007-11-25  Ales Hakl  <ales at hakl dot net>
 
 	* lib/load.c (dfsch_require): rename *modules* to load:*modules*
